Fix (QA review) :  Update spacing and colors on textfields  (#44)
* Update spacing and colors on textfields + QA design

--- a/packages/mikado_reborn/src/assets/styles/settings/_fonts.scss
+++ b/packages/mikado_reborn/src/assets/styles/settings/_fonts.scss
@@ -98,7 +98,7 @@
 }
 
 @mixin button-small-font{
-  font-size:($button-small-font-size: / $baseFontSize) * 1rem;
+  font-size:($button-small-font-size / $baseFontSize) * 1rem;
   text-decoration:$button-small-text-decoration;
   font-family:$button-small-font-family;
   font-weight:$button-small-font-weight;
@@ -113,7 +113,7 @@
 }
 
 @mixin button-medium-font {
-  font-size: ($button-medium-font-size: / $baseFontSize) * 1rem;
+  font-size: ($button-medium-font-size / $baseFontSize) * 1rem;
   text-decoration: $button-medium-text-decoration;
   font-family: $button-medium-font-family;
   font-weight: $button-medium-font-weight;
