--- a/packages/mikado_reborn/src/components/Button/Button.scss
+++ b/packages/mikado_reborn/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
 
-  padding: 16px 24px;
+  padding: 2rem 3rem;
   border-radius: 4px;
 
   text-decoration: none;
@@ -13,15 +13,8 @@
   box-shadow: none;
 
   /* button/medium */
-  font-family: Rubik;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 16px;
-  border-width: 0px;
-
-  letter-spacing: 0.08em;
-  text-transform: uppercase;
+  @include button-medium-font;
+  border: none;
   cursor: pointer;
 
   .mkr__icon {
@@ -34,14 +27,12 @@
   };
 
   &:hover:enabled {
-    outline: 1px solid #FFFFFF;
     box-shadow: 0px 0px 8px -4px map-get($colors, 'neutral-20');
   };
 
   &.small {
-    padding: 8px 16px;
-    font-size: 12px;
-    line-height: 16px;
+    @include button-small-font;
+    padding: 1.5rem 2rem;
   }
 
   &.danger--light {
