--- a/packages/mikado_reborn/src/components/Snackbar/Snackbar.scss
+++ b/packages/mikado_reborn/src/components/Snackbar/Snackbar.scss
@@ -8,13 +8,10 @@
   cursor: default;
   flex-direction: row;
   align-items: center;
-  padding: 12px 16px;
+  padding: 1.5rem 2rem;
   justify-content: space-between;
-  max-width: 240px;
-  left: 16px;
-  top: 16px;
+  min-width: 46rem;
   border-radius: 4px;
-  margin: 0px 10px;
   color: map-get($colors, 'white');
   z-index: 200;
 
