--- a/packages/mikado_reborn/src/components/Textarea/Textarea.scss
+++ b/packages/mikado_reborn/src/components/Textarea/Textarea.scss
@@ -2,6 +2,7 @@
 
 .mkr__textarea {
   @include mkr__input;
+  padding: 1.5rem 2rem;
 
   textarea {
     text-decoration: none;
